--- a/project/web/html/manageActivity.html
+++ b/project/web/html/manageActivity.html
@@ -22,7 +22,7 @@
                                 <strong class="card-title">活动管理</strong>
                                 {%if $role === 1%}
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
-                                    <a href="/php/manageActivityManager.php">管理员入口</a>
+                                    <a href="/php/manageActivityManager.php">超级管理员入口</a>
                                 {%/if%}
                             </div>
                             <div class="card-body">
