--- a/project/web/html/attendentManager_others.html
+++ b/project/web/html/attendentManager_others.html
@@ -49,13 +49,13 @@
                             <div class="card-body">
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered table-hover">
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
-                                    <a href="" style="color: rgba(31, 155, 212, 0.911);" class="login">所有用户</a>
+                                    <a href="/php/attendentManager.php?activity_id={%$activity_id%}" style="color: rgba(31, 155, 212, 0.911);" class="login">所有用户</a>
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
                                     <a href="/php/attendentManager_manager.php?activity_id={%$activity_id%}" style="color: rgba(31, 155, 212, 0.911);" class="login">管理员</a>
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
                                     <a href="/php/attendentManager_participants.php?activity_id={%$activity_id%}" style="color: rgba(31, 155, 212, 0.911);" class="login">参加者</a>
                                     <span style="font-family:'Times New Roman';">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
-                                    <a href="/php/attendentManager_others.php?activity_id={%$activity_id%}" style="color: rgba(31, 155, 212, 0.911);" class="login">未参加</a>
+                                    <a href="" style="color: rgba(31, 155, 212, 0.911);" class="login">未参加</a>
                                     <thead>
                                         <tr>
                                             <th>用户ID</th>
@@ -67,30 +67,6 @@
                                     </thead>
                                     {%strip%}
                   <tbody>
-                    {%foreach $list as $user%}
-                                        <tr>
-                                            <td>{%$user.user_id%}</td>
-                                            <td>{%$user.username%}</td>
-                                            <td>{%$user.email%}</td>
-                                            <td>
-                                              {%if $user.role == 1%}
-                                              管理员
-                                              {%else%}
-                                              参加者
-                                              {%/if%}
-                                            </td>
-                                            <td>
-                                                <a href="javascript:delete_record({%$activity_id%}, {%$user.user_id%})">删除用户</a>
-                                                <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                                {%if $user.role == 0%}
-                                                <a href="javascript:add_activity_manager({%$activity_id%},{%$user.user_id%})">添加为管理员</a>
-                                                {%else%}
-                                                <a href="javascript:cancel_activity_manager({%$activity_id%},{%$user.user_id%})">取消管理员权限</a>
-                                                {%/if%}
-                                                <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                                            </td>
-                    </tr>
-                                        {%/foreach%}
                     {%foreach $other_list as $user%}
                                         <tr>
                                             <td>{%$user.user_id%}</td>
