--- a/project/web/html/viewActivityInfo.html
+++ b/project/web/html/viewActivityInfo.html
@@ -25,7 +25,7 @@
                             {%if $from_info_change==0 and $login==false %}
                             <p style=" text-align:right;font-size:15px;"><a href="/login.php">申请加入会议</a></p>
                             {%elseif $from_info_change==0 and $attendence==false%}
-                            <p style=" text-align:right;font-size:15px;"><a href="">申请加入会议</a></p>
+                            <p style=" text-align:right;font-size:15px;"><a href="javascript:add_user_into_activity({%$activity.id%}, {%$user_id%})">申请加入会议</a></p>
                             {%/if%}
                             {%if $from_info_change==0%}
                             <p style=" text-align:right;font-size:15px;"><a href="/index.php">返回活动列表</a></p>
@@ -38,4 +38,14 @@
                      </div>
 				</div>
 </body>
+{%/block%}
+
+{%block name="javascript"%}
+    <script type="text/javascript">
+        function add_user_into_activity(activity_id, user_id){
+            if (confirm("确认加入此活动？")){
+                window.location.href = "/php/user_activity/addActivityUserFromInfo.php?activity_id=" + activity_id + "&user_id=" + user_id; 
+            }
+        }
+    </script>
 {%/block%}
