--- a/project/web/html/addActivity.html
+++ b/project/web/html/addActivity.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="/html/assets/css/bootstrap.min.css" type="text/css" media="all">
     <link rel="stylesheet" href="/html/assets/css/lib/datatable/dataTables.bootstrap.min.css" type="text/css" media="all">
 
+    <link href="/html/assets/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" media="all">
+
     <link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
     <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
 
