--- a/project/web/html/infoManager.html
+++ b/project/web/html/infoManager.html
@@ -2,6 +2,7 @@
 {%block name="css" append%}
     <link href="/css/eventmin.css" rel="stylesheet" type="text/css" media="all">
     <link href="/html/assets/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/html/assets/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" media="all">
     
     <link href="/css/login.css" rel="stylesheet" type="text/css" media="all">
     <link href="/css/link.css" rel="stylesheet" type="text/css" media="all">
