--- a/project/web/html/register.html
+++ b/project/web/html/register.html
@@ -45,6 +45,9 @@
             return;
         }
         **/
+
+        var statusUsername = 0;
+
         //检查用户输入
         function checkRegister(){
             if(checkUsername() && checkPassword()){
@@ -54,12 +57,14 @@
         }
         //检查登录用户名
         function checkUsername(){
-            return true;
             var username = document.getElementById("userid");
-            if(username.value.length!=0){
-                return true;
-            }else{
+            if (username.value.length == 0) {
                 alert("请输入用户名");
+                return false;
+            }
+            if (statusUsername){
+                return true;
+            } else {
                 return false;
             }
         }
@@ -85,9 +90,12 @@
                 var username = document.getElementById("userid").value;
                 //alert("hi");
                 $.get("./ajaxRequest/checkUsernameUsed.php", {username: username}, function(msg) {
+                    msg = $.trim(msg);
+                    document.getElementById("username_alert").innerHTML = msg;
                     if (msg !== "") {
-                        //alert(msg);
-                        document.getElementById("username_alert").innerHTML = msg;
+                        statusUsername = 0;
+                    } else {
+                        statusUsername = 1;
                     }
                 });
             });
@@ -97,9 +105,11 @@
                 var pw_alert = document.getElementById("password_alert");
                 if (password.value.length < 6) {
                     pw_alert.innerHTML = "密码长度至少6位";
+                    statusPw = 0;
                 }
                 else {
                     pw_alert.innerHTML = "";
+                    statusPw = 1;
                 }
             });
 
