创建infoExport页面，功能未完成

--- a/project/web/html/attendentManager.html
+++ b/project/web/html/attendentManager.html
@@ -27,7 +27,7 @@
             <ul class="nav nav-sidebar" style="line-height:60px">
              <li class=""><a href="javascript:info_manage({%$activity_id%})">信息修改</a></li>
              <li class="active"><a href="">用户管理</a></li>
-             <li class=""><a href="">信息导出</a></li>
+             <li class=""><a href="javascript:info_export({%$activity_id%})">信息导出</a></li>
              <li class=""><a href="">详细日程</a></li>
              <!--后两个功能只做占位符用 可以再定-->
             </ul>
@@ -122,6 +122,10 @@
         function info_manage(activity_id){
             window.location.href = "/php/infoManager.php?activity_id=" + activity_id;
         }
+
+		function info_export(activity_id) {
+			window.location.href = "/php/infoExport.php?activity_id=" + activity_id;
+		}
 
         function delete_record(activity_id, user_id) {
             if (confirm("确认将此用户退出活动？")) {
