--- a/project/web/html/attendentManager_others.html
+++ b/project/web/html/attendentManager_others.html
@@ -27,7 +27,7 @@
             <ul class="nav nav-sidebar" style="line-height:60px">
              <li class=""><a href="javascript:info_manage({%$activity_id%})">信息修改</a></li>
              <li class="active"><a href="">用户管理</a></li>
-             <li class=""><a href="">信息导出</a></li>
+             <li class=""><a href="javascript:info_export({%activity_id%}">信息导出</a></li>
              <li class=""><a href="">详细日程</a></li>
              <!--后两个功能只做占位符用 可以再定-->
             </ul>
@@ -99,6 +99,10 @@
             window.location.href = "/php/infoManager.php?activity_id=" + activity_id;
         }
 
+		function info_export(activity_id) {
+			window.location.href = "/php/infoExport.php?activity_id=" + activity_id;
+		}
+        
         function delete_record(activity_id, user_id) {
             if (confirm("确认将此用户退出活动？")) {
                 window.location.href = "/php/user_activity/deleteRecordManager.php?activity_id=" + activity_id + "&user_id=" + user_id; 
