--- a/project/web/html/infoExport.html
+++ b/project/web/html/infoExport.html
@@ -36,52 +36,15 @@
       <div class="mid-class">
         <div style="position: absolute; margin-left:100px;width:1100px;">
            <div class="art-right-w3ls">
-              <form action="/php/activities/changeActivityInfo.php" method="post" name="registerForm">
+              <form action="/php/activities/downloadXls.php" method="post" name="registerForm">
                 <input type="hidden" name="activity_id" value={%$activity_id%}>
-                 <div class="main">
-                    <div class="form-left-to-w3l">
-                       <input type="text" id="name" name="name" placeholder="会议名称" autocomplete="off"required="">
-                    </div>
-                    <div class="form-left-to-w3l ">
-                        <input type="text" id="abbr" name="abbr" placeholder="会议简称" autocomplete="off" required=""> 
-                        <div class="clear"></div>   
-                    </div>
-                    <div class="form-group">
-                      <div class="form-left-to-w3l ">
-                          <input type="text" id="begin_date" name="begin_date" class="form-control" placeholder="开始时间" autocomplete="off" required="">  
-                          <div class="clear"></div>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="form-left-to-w3l ">
-                          <input type="text" id="end_date" name="end_date" class="form-control" placeholder="结束时间" autocomplete="off" required="">  
-                          <div class="clear"></div>
-                      </div>
-                    </div>
-                    <div class="form-left-to-w3l ">
-                        <input type="text" id="description" name="description" placeholder="会议介绍" autocomplete="off" required="">  
-                          <div class="clear"></div> 
-                    </div>
-                    <div class="form-left-to-w3l ">
-                        <input type="text" id="website_address" name="website_address" placeholder="会议网址" autocomplete="off" required=""> 
-                        <div class="clear"></div>   
-                    </div>
-                   </div>
                  <div class="clear"></div>
                  <div class="btnn">
                   <div style="position: absolute; margin-left:550px;">
-                    <button type="submit" onclick="return checkActivity();">修改活动信息</button>
+                    <button type="submit" onclick="return checkActivity();">下载参会者信息</button>
                   </div>
                  </div>
               </form>
-              <div class="w3layouts_more-buttn">
-                <div style="position: absolute;margin-top:-20px;margin-left:590px;">
-                 <h3>
-                    <a href="/php/infoManager.php?activity_id={%$activity_id%}">重置信息
-                    </a>
-                 </h3>
-                </div>
-              </div>
            </div>
         </div>
       </div>
