增加签到功能
1.添加了用户签到接口
2.添加了管理员查看人员签到的界面

--- a/project/web/html/infoExport.html
+++ b/project/web/html/infoExport.html
@@ -25,8 +25,9 @@
               <ul class="nav nav-sidebar" style="line-height:60px">
                 <li class=""><a href="javascript:info_manage({%$activity_id%})">信息修改</a></li>
                 <li class=""><a href="javascript:attendent_manage({%$activity_id%})">用户管理</a></li>
+                <li class=""><a href="javascript:signin_state({%$activity_id%})">签到情况</a></li>
                 <li class="active"><a href="">信息导出</a></li>
-                <li class=""><a href="">详细日程</a></li>
+
              <!--后两个功能只做占位符用 可以再定-->
               </ul>
             </div>
@@ -73,6 +74,9 @@
         }       
         function attendent_manage(activity_id){
             window.location.href = "/php/attendentManager.php?activity_id=" + activity_id;
+        }
+        function signin_state(activity_id) {
+            window.location.href = "/php/signInState.php?activity_id=" + activity_id;
         }
     </script>
 
