--- a/project/web/html/attendentManager_manager.html
+++ b/project/web/html/attendentManager_manager.html
@@ -27,8 +27,9 @@
             <ul class="nav nav-sidebar" style="line-height:60px">
              <li class=""><a href="javascript:info_manage({%$activity_id%})">信息修改</a></li>
              <li class="active"><a href="">用户管理</a></li>
+             <li class=""><a href="javascript:signin_state({%$activity_id%})">签到情况</a></li>
              <li class=""><a href="javascript:info_export({%$activity_id%}">信息导出</a></li>
-             <li class=""><a href="">详细日程</a></li>
+             
              <!--后两个功能只做占位符用 可以再定-->
             </ul>
           </div>
@@ -106,6 +107,10 @@
 		function info_export(activity_id) {
 			window.location.href = "/php/infoExport.php?activity_id=" + activity_id;
 		}
+
+        function signin_state(activity_id) {
+            window.location.href = "/php/signInState.php?activity_id=" + activity_id;
+        }
         
         function delete_record(activity_id, user_id) {
             if (confirm("确认将此用户退出活动？")) {
